[gd_scene load_steps=4 format=2]

[ext_resource path="res://FontSize14.tres" type="DynamicFont" id=1]
[ext_resource path="res://ItemInfoWindow.gd" type="Script" id=2]
[ext_resource path="res://FontSize16.tres" type="DynamicFont" id=3]

[node name="ItemInfoWindow" type="Node" groups=[
"ItemInfoWindow",
]]
script = ExtResource( 2 )
lblName = NodePath("MarginContainer/VBoxContainer/Zeile1/lblNameText")
lblRarity = NodePath("MarginContainer/VBoxContainer/Zeile1/lblRarityText")
lblPower = NodePath("MarginContainer/VBoxContainer/Zeile1/lblPowerText")
lblType = NodePath("MarginContainer/VBoxContainer/Zeile1/lblTypeText")
lblUses = NodePath("MarginContainer/VBoxContainer/Zeile2/HBoxContainer/lblUsesText")
cbAtun = NodePath("MarginContainer/VBoxContainer/Zeile2/HBoxContainer5/cbAtun")
cbCurse = NodePath("MarginContainer/VBoxContainer/Zeile2/HBoxContainer2/cbCurse")
lblSourcbook = NodePath("MarginContainer/VBoxContainer/Zeile2/HBoxContainer3/lblSourcebookText")
lblPage = NodePath("MarginContainer/VBoxContainer/Zeile2/HBoxContainer4/lblPageText")
lblMaterialPrice = NodePath("MarginContainer/VBoxContainer/Zeile3/BasePrice/lblMatBasePriceText")
lblNrMaterials = NodePath("MarginContainer/VBoxContainer/Zeile3/NrMaterials/lblNrOfMaterialsText")
lblCombMatCost = NodePath("MarginContainer/VBoxContainer/Zeile3/CombCost/lblCombMatCostText")
lblLaborcost = NodePath("MarginContainer/VBoxContainer/Zeile3/LaborCost/lblLaborCostText")
lblCombDMG = NodePath("MarginContainer/VBoxContainer/Zeile3/CostCombDMG/lblCombPriceText")
lblModPrice = NodePath("MarginContainer/VBoxContainer/Zeile3/ModPrice/lblModPriceText")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 839.0
margin_bottom = 96.0
mouse_filter = 1
color = Color( 0.388235, 0.0431373, 0.427451, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 839.0
margin_bottom = 96.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 8
alignment = 1

[node name="Zeile1" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 839.0
margin_bottom = 20.0
alignment = 1

[node name="lblName" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_right = 56.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Name: "

[node name="lblNameText" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 60.0
margin_right = 386.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Power Armor of Destruction"

[node name="lblRarity" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 390.0
margin_top = 2.0
margin_right = 435.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Rarity: "

[node name="lblRarityText" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 439.0
margin_top = 2.0
margin_right = 539.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Selten"

[node name="lblPower" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 543.0
margin_top = 2.0
margin_right = 591.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Power: "

[node name="lblPowerText" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 595.0
margin_top = 2.0
margin_right = 695.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Minor"

[node name="lblType" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 699.0
margin_top = 2.0
margin_right = 735.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Type: "

[node name="lblTypeText" type="Label" parent="MarginContainer/VBoxContainer/Zeile1"]
margin_left = 739.0
margin_top = 2.0
margin_right = 839.0
margin_bottom = 18.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Battleaxe"

[node name="Zeile2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 839.0
margin_bottom = 52.0
custom_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Zeile2"]
margin_left = 77.0
margin_right = 186.0
margin_bottom = 24.0

[node name="lblUses" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer"]
margin_top = 4.0
margin_right = 37.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Uses: "

[node name="lblUsesText" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer"]
margin_left = 41.0
margin_top = 4.0
margin_right = 109.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Permanent"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Zeile2"]
margin_left = 236.0
margin_right = 349.0
margin_bottom = 24.0
custom_constants/separation = -6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer5"]
margin_top = 4.0
margin_right = 95.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Req. Attument: "

[node name="cbAtun" type="CheckBox" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer5"]
margin_left = 89.0
margin_right = 113.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Zeile2"]
margin_left = 399.0
margin_right = 483.0
margin_bottom = 24.0
custom_constants/separation = -6

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer2"]
margin_top = 4.0
margin_right = 66.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Is Cursed: "

[node name="cbCurse" type="CheckBox" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer2"]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 24.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Zeile2"]
margin_left = 533.0
margin_right = 646.0
margin_bottom = 24.0

[node name="lblSourcbook" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer3"]
margin_top = 4.0
margin_right = 81.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Sourcebook: "

[node name="lblSourcebookText" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer3"]
margin_left = 85.0
margin_top = 4.0
margin_right = 113.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "DMG"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Zeile2"]
margin_left = 696.0
margin_right = 761.0
margin_bottom = 24.0

[node name="lblPage" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer4"]
margin_top = 4.0
margin_right = 37.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "Page: "

[node name="lblPageText" type="Label" parent="MarginContainer/VBoxContainer/Zeile2/HBoxContainer4"]
margin_left = 41.0
margin_top = 4.0
margin_right = 65.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 1 )
text = "666"

[node name="Zeile3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 839.0
margin_bottom = 96.0
custom_constants/separation = 15
alignment = 1

[node name="BasePrice" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Zeile3"]
margin_right = 129.0
margin_bottom = 36.0
alignment = 1

[node name="lblMatBasePrice" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/BasePrice"]
margin_right = 129.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Material Base Price: "
align = 1

[node name="lblMatBasePriceText" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/BasePrice"]
margin_top = 20.0
margin_right = 129.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "50 GP"
align = 1

[node name="NrMaterials" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Zeile3"]
margin_left = 144.0
margin_right = 250.0
margin_bottom = 36.0
alignment = 1

[node name="lblNrOfMaterials" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/NrMaterials"]
margin_right = 106.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "No. of Materials: "
align = 1

[node name="lblNrOfMaterialsText" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/NrMaterials"]
margin_top = 20.0
margin_right = 106.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "7"
align = 1

[node name="CombCost" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Zeile3"]
margin_left = 265.0
margin_right = 411.0
margin_bottom = 36.0
alignment = 1

[node name="lblCombMatCost" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/CombCost"]
margin_right = 146.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Combined Material Cost"
align = 1

[node name="lblCombMatCostText" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/CombCost"]
margin_top = 20.0
margin_right = 146.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "350"
align = 1

[node name="LaborCost" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Zeile3"]
margin_left = 426.0
margin_right = 526.0
margin_bottom = 36.0
alignment = 1

[node name="lblLaborCost" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/LaborCost"]
margin_right = 100.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Labor Cost"
align = 1

[node name="lblLaborCostText" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/LaborCost"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "100"
align = 1

[node name="CostCombDMG" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Zeile3"]
margin_left = 541.0
margin_right = 724.0
margin_bottom = 36.0
alignment = 1

[node name="lblCombPrice" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/CostCombDMG"]
margin_right = 183.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Cost Combined (average DMG)"
align = 1

[node name="lblCombPriceText" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/CostCombDMG"]
margin_top = 20.0
margin_right = 183.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "450"
align = 1

[node name="ModPrice" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Zeile3"]
margin_left = 739.0
margin_right = 839.0
margin_bottom = 36.0
alignment = 1

[node name="llbModPrice" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/ModPrice"]
margin_right = 100.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "Modified Price"
align = 1

[node name="lblModPriceText" type="Label" parent="MarginContainer/VBoxContainer/Zeile3/ModPrice"]
margin_top = 20.0
margin_right = 100.0
margin_bottom = 36.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 1 )
text = "1125"
align = 1
